--- a/Challenges/Challanger05/style/menu.css
+++ b/Challenges/Challanger05/style/menu.css
@@ -35,7 +35,8 @@
 }
 
 .nav {
-    width: 800px;
+    max-width: 1200px;
+    width: 8100vw;
     height: 50px;
     display: flex;
     list-style: none;
